# codingame-the-fall

./: .gitignore  Cargo.toml  README.md  build.rs  git-subtrees-update
.github/workflows/: ci.yml
src/: andex.rs  copstr.rs  core.rs  entrypoint.rs  entrypoint1.rs  entrypoint2.rs  error.rs  input.rs  lib.rs  sqrid
tests/: episode1.rs  episode2.rs
