[package]
name = "the-fall"
version = "0.0.1"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
build = "build.rs"
edition = "2018"

[lib]
doctest = false

[build-dependencies]
rustsourcebundler = "0.10.0"
# rustsourcebundler = { git = "https://github.com/lpenz/rust-sourcebundler", branch = "devel" }

[dependencies]
itertools = "0.10.0"
libc = "0.2.93"
rand = "0.8.3"
regex = "1.4.5"
# time = "0.2.26"

[dev-dependencies]
anyhow = "1"

[dependencies.chrono]
version = "0.4.19"
default-features = false
features = ["clock"]

