[package]
name = "the-fall"
version = "0.0.1"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
build = "build.rs"
edition = "2018"

[lib]
doctest = false

[build-dependencies]
rustsourcebundler = "0.9.0"

[dependencies]
chrono = "0.4.19"
itertools = "0.10.0"
libc = "0.2.93"
rand = "0.8.3"
regex = "1.4.5"
time = "0.2.26"

[dev-dependencies]
anyhow = "1"
