[package]
name = "the-fall"
version = "0.0.1"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
build = "build.rs"
edition = "2021"

[lib]
doctest = false

[build-dependencies]
rustsourcebundler = "0.13.0"
# rustsourcebundler = { git = "https://github.com/lpenz/rust-sourcebundler", branch = "devel" }
# rustsourcebundler = { path = "/home/lpenz/Sync/projs/github-1-wip/rust-sourcebundler" }

[dependencies]
itertools = "0.11.0"
libc = "0.2.147"
rand = "0.8.5"
regex = "1.8.4"
# time = "0.3.22"

[dev-dependencies]
anyhow = "1"

[dependencies.chrono]
version = "0.4.38"
default-features = false
features = ["clock"]

